# Phone_Book

./: README.md  pyproject.toml
custom_poll/: .gitignore  manage.py  pyproject.toml
custom_poll/core/: admin.py  models.py  serializes.py  urls.py  views.py
custom_poll/core/migrations/: 0001_initial.py
custom_poll/custom_poll/: asgi.py  settings.py  urls.py  wsgi.py
